Accs outside the visual viewport should get offscreen state/not appear in the viewport cache/not be hittestable
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox136 | --- | fixed |
People
(Reporter: morgan, Assigned: morgan)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
Previously (see bug 1787274) we modified how we compute offscreen state; we assume the viewport cache is the source of truth and any accs that do not appear in it are offscreen. Using the following STR, I was able to confirm that accs that are moved outside of the viewport during APZ do not get removed from the viewport cache. This seems to indicate we aren't updating the viewport cache when APZ occurs.
Though these accs aren't hittestable with the mouse (you can't move the mouse outside of the visual viewport), I was able to confirm they are still hittestable in our browser test framework.
STR:
- Load
data:text/html,<button>hello world
- Open the accessibility inspector, select the button, in the righthand panel expand the "state" dictionary
Expected/Actual:
The button has no "offscreen" state; it is on screen
- APZ the bottom right corner of the document such that the button is no longer within the visual viewport
- Open the accessibility inspector, select the button, in the righthand panel expand the "state" dictionary
Expected:
The button is given the "offscreen" state
Actual:
The button has no "offscreen" state
Assignee | ||
Comment 1•24 days ago
|
||
Blocking this on boundsa11y because we don't seem to have a meta for hittesting
Assignee | ||
Comment 2•24 days ago
|
||
Marking S3 because I think this is unlikely to come up in real AT use, and as I understand it the OFFSCREEN state isn't depended on for much
Assignee | ||
Comment 3•24 days ago
|
||
Assignee | ||
Updated•17 days ago
|
Comment 5•15 days ago
|
||
bugherder |
Updated•2 days ago
|
Description
•