Bug 1941683: Update the viewport cache when a CacheDomain::APZ update happens r=eeejay

Differential Revision: https://phabricator.services.mozilla.com/D234256